crates/bsql/tests/compile_fail/alter_rejected.rs
fn main() {
    let _ = bsql::query!("ALTER TABLE users ADD COLUMN x INT");
}
