crates/bsql/tests/compile_fail/alter_rejected.stderr
error: unsupported statement type: `alter`. bsql supports SELECT, INSERT, UPDATE, DELETE
 --> tests/compile_fail/alter_rejected.rs:2:13
  |
2 |     let _ = bsql::query!("ALTER TABLE users ADD COLUMN x INT");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
